# openfaas-haskell-container

./: Dockerfile  README.md  haskell-template.cabal
.github/workflows/: publish-dockerhub-image.yml  publish-image-ghcr.yml
