cabal-version: 2.2

name: haskell-template
version: 0.1.0.0

common common
  build-depends:
      base >= 4.12
  default-language: Haskell2010
  ghc-options: -Wall

executable haskell-template
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      scotty >= 0.12,
      bytestring >= 0.10.12.0,
      text >= 1.2.4.1

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      hspec >= 2.7,
      QuickCheck
  build-tool-depends:
      hspec-discover:hspec-discover
